Update JSRef.ejs (#3077)
* Update JSRef.ejs

Removes slug trailing slash for jsref.

* Update kumascript/macros/JSRef.ejs

Co-authored-by: Peter Bengtsson <peterbe@mozilla.com>

Co-authored-by: Peter Bengtsson <peterbe@mozilla.com>

--- a/kumascript/macros/JSRef.ejs
+++ b/kumascript/macros/JSRef.ejs
@@ -32,7 +32,7 @@ var output = "";
 if (slug) {
 var locale = env.locale;
 var rtlLocales = ['ar', 'he', 'fa'];
-var slug_stdlib = '/' + env.locale + '/docs/Web/JavaScript/Reference/Global_Objects/';
+var slug_stdlib = `/${env.locale}/docs/Web/JavaScript/Reference/Global_Objects`;
 var mainObj = slug.replace('Web/JavaScript/Reference/Global_Objects/', '').split('/')[0];
 
 // Data for inheritance chain
