changes based on review feedback

--- a/client/src/site-search/index.scss
+++ b/client/src/site-search/index.scss
@@ -1,5 +1,14 @@
 .site-search {
   min-height: 500px;
+
+  a {
+    text-decoration: underline;
+
+    &:hover,
+    &:focus {
+      text-decoration: none;
+    }
+  }
 }
 
 .query-string {
