enhancement: next iteration of search result UI updates (#3086)
* enhancement: next iteration of search result UI updates

Second iteration of the search results page UI updates

Part of #2889

* changes based on review feedback

* Update client/src/site-search/index.scss

Co-authored-by: Peter Bengtsson <peterbe@mozilla.com>

Co-authored-by: Peter Bengtsson <peterbe@mozilla.com>

--- a/client/src/site-search/index.scss
+++ b/client/src/site-search/index.scss
@@ -1,5 +1,16 @@
 .site-search {
-  min-height: 650px;
+  min-height: 500px;
+
+  // This is temporary. 
+  // Once https://github.com/mdn/yari/issues/2901 lands we can delete this. 
+  a {
+    text-decoration: underline;
+
+    &:hover,
+    &:focus {
+      text-decoration: none;
+    }
+  }
 }
 
 .query-string {
