--- a/client/src/site-search/search-results.scss
+++ b/client/src/site-search/search-results.scss
@@ -3,35 +3,23 @@
 @import "~@mdn/minimalist/sass/vars/typography";
 
 .search-results {
-  a.title {
-    color: black;
-    font-weight: bold;
-  }
-  span.highlight {
+  .highlight,
+  .summary {
+    color: $neutral-200;
     display: block;
-    font-style: italic;
-    font-size: 0.9rem;
-  }
-  span.summary {
-    display: block;
-    font-size: 0.9rem;
-  }
-  span.nerd-data {
-    margin-left: 20px;
-    font-size: 80%;
   }
 
-  // Used to indicate that a search result link is in a different locale
-  .locale-indicator {
-    font-size: 80%;
-    background-color: bisque;
-    padding: 3px;
-    border-radius: 2px;
+  .highlight {
+    font-style: italic;
+  }
+
+  .nerd-data {
+    font-size: $small-font-size;
+    margin-left: $base-spacing;
   }
 
   .loading-wrapper {
     min-height: 500px;
-    margin: 100px;
   }
 }
 
@@ -53,13 +41,10 @@
 .search-results-list {
   margin-bottom: $base-spacing;
 
-  a {
-    text-decoration: underline;
-  }
-
   .title {
     background-color: inherit;
     color: $neutral-100;
+    display: inline-block;
     margin: 0;
     margin-bottom: $base-spacing / 4;
     padding: 0;
@@ -70,6 +55,30 @@
     }
   }
 
+  .search-result-url {
+    margin-bottom: $base-spacing / 4;
+  }
+
+  // Used to indicate that a search result link is in a different locale
+  .locale-indicator {
+    background-color: $neutral-550;
+    cursor: help;
+    display: block;
+    font-size: $small-font-size;
+    margin-top: $base-unit;
+    max-width: max-content;
+    padding: ($base-unit / 2) $base-unit;
+    position: relative;
+    top: -3px;
+
+    @media #{$mq-tablet-and-up} {
+      display: inline-block;
+      margin: 0;
+      margin-left: $base-spacing / 4;
+      padding: $base-unit;
+    }
+  }
+
   mark {
     background-color: $yellow-400;
     font-style: italic;
@@ -77,11 +86,11 @@
 }
 
 .search-result-entry {
-  margin-bottom: $base-spacing;
+  margin-bottom: $base-spacing * 2;
   word-wrap: break-word;
 
   @media #{$mq-tablet-and-up} {
-    margin-bottom: $base-spacing * 1.5;
+    margin-bottom: $base-spacing * 2.5;
   }
 }
 
