fix: prettier fail
Fix unintentional Prettier fail

--- a/client/src/site-search/index.scss
+++ b/client/src/site-search/index.scss
@@ -1,8 +1,8 @@
 .site-search {
   min-height: 500px;
 
-  // This is temporary. 
-  // Once https://github.com/mdn/yari/issues/2901 lands we can delete this. 
+  // This is temporary
+  // Once https://github.com/mdn/yari/issues/2901 lands we can delete this
   a {
     text-decoration: underline;
 
