--- a/client/src/document/organisms/metadata/index.scss
+++ b/client/src/document/organisms/metadata/index.scss
@@ -4,12 +4,13 @@
 
 .metadata {
   background-color: $neutral-550;
+  margin: ($base-spacing * 2) 0;
+  padding: $base-spacing;
 }
 
 .metadata-content-container {
   margin: 0 auto;
   max-width: $max-width-default;
-  padding: $base-spacing;
 
   .on-github {
     margin-bottom: $base-spacing;
