--- a/client/src/document/toolbar/index.scss
+++ b/client/src/document/toolbar/index.scss
@@ -2,12 +2,11 @@
 @import "~@mdn/minimalist/sass/vars/layout";
 
 .toolbar {
-  margin: 0 auto;
-  padding: $base-unit;
+  display: none;
 
-  // This is the same we use for the `.titlebar-container h1`
-  @media #{$mq-tablet-and-up} {
-    max-width: $max-width-default;
+  @media #{$mq-small-desktop-and-up} {
+    display: block;
+    margin: 0 auto;
     padding: $base-unit $base-spacing;
   }
 
