--- a/client/src/ui/molecules/breadcrumbs/index.scss
+++ b/client/src/ui/molecules/breadcrumbs/index.scss
@@ -5,17 +5,18 @@
 @import "~@mdn/minimalist/sass/vars/layout";
 @import "~@mdn/minimalist/sass/vars/typography";
 
-.breadcrumbs {
-  font-size: $small-font-size;
-  padding: $base-unit $base-spacing;
+.breadcrumbs-container {
+  @media #{$mq-small-desktop-and-up} {
+    padding: ($base-spacing / 2) $base-spacing;
+  }
 
   @media #{$mq-small-desktop-and-up} {
-    padding: $base-spacing;
+    padding: 0;
   }
 
   a {
-    display: flex;
     align-items: center;
+    display: flex;
   }
 
   ol {
@@ -43,7 +44,6 @@
         background-size: 12px;
         content: "";
         height: 12px;
-        margin: 0 5px;
         transform: rotate(90deg);
         width: 12px;
       }
@@ -53,6 +53,11 @@
       &::after {
         display: inline-block;
       }
+    }
+
+    [property="name"] {
+      display: inline-block;
+      margin: 0 ($base-unit / 2);
     }
 
     .breadcrumb-penultimate {
