CSS_Ref should use smartLink (#2985)
* CSS_Ref should use smartLink

Part of #2984

* leftovers

--- a/kumascript/macros/CSS_Ref.ejs
+++ b/kumascript/macros/CSS_Ref.ejs
@@ -543,7 +543,13 @@ for (let characterIndex in characters) {
 
     for (let i = 0; i < index[character].length; i++) {
         let url = baseURL + index[character][i].urlPath;
-        output += `<li><a href="${url}"><code>${htmlEscape(index[character][i].label)}</code></a></li>`;
+        output += `<li>${web.smartLink(
+            url,
+            null,
+            `<code>${htmlEscape(index[character][i].label)}</code>`,
+            index[character][i].urlPath,
+            baseURL
+        )}</li>`;
     }
 
     if (groupingType === "alphabetically") {
