--- a/kumascript/macros/HTMLElement.ejs
+++ b/kumascript/macros/HTMLElement.ejs
@@ -9,6 +9,7 @@
   $2 - Anchor within the page (optional)
 */
 const elementName = $0.toString().toLowerCase();
+const disableFlawChecks = $3 || false;
 let linkText = ($1 || elementName);
 switch (env.locale) {
     case 'ja':
@@ -19,10 +20,7 @@ switch (env.locale) {
     default: break;
 }
 
-const sectionName = mdn.localString({
-    "es": "Elemento",
-    "en-US": "Element"
-});
+const sectionName = "Element"
 const baseURL = `/${env.locale}/docs/Web/HTML`;
 const urlPath = `/${sectionName}/${elementName}`
 let url = `${baseURL}${urlPath}`;
@@ -34,5 +32,5 @@ if (linkText === elementName && elementName.indexOf(" ") === -1) {
     linkText = "<code>&lt;" + linkText + "&gt;</code>";
 }
 
-const link = web.smartLink(url, null, linkText, sectionName + '/' + elementName, baseURL);
+const link = web.smartLink(url, null, linkText, sectionName + '/' + elementName, baseURL, disableFlawChecks);
 %><%- link %>
