--- a/kumascript/macros/APIRef.ejs
+++ b/kumascript/macros/APIRef.ejs
@@ -1,3 +1,5 @@
+const web = require("../src/api/web");
+
 <%
 // API Sidebar
 //
@@ -204,7 +206,7 @@ function buildSublist(pages, title) {
     if (slug == aPage.slug) {
         result += '<em><code>' + title + '</code></em>'
     } else {
-        result += '<a href="' + url + '"><code>' + title + '</code></a>';
+        result += web.smartLink(url, null, `<code>${title}</code>`, APIHref);
     }
 
     if (rtlLocales.indexOf(locale) != -1) {
@@ -228,7 +230,7 @@ function buildIFList(interfaces, title) {
 
   for (var i = 0; i < interfaces.length; i++) {
     var url = interfaces[i].replace('()', '').replace('.', '/');
-    result += '<li><a href="' + APIHref + '/' + url + '"><code>' + interfaces[i] + '</code></a></li>';
+    result += `<li>${web.smartLink(APIHref + '/' + url, null, `<code>${interfaces[i]}</code>`, APIHref)}</li>`;
   }
 
   result += '</ol></details></li>';
@@ -239,9 +241,10 @@ function buildIFList(interfaces, title) {
 // output
 output = '<section class="Quick_links" id="Quick_Links"><ol>';
 if (group && webAPIGroups[0][group] && webAPIGroups[0][group].overview) {
-  output += '<li><strong><a href="' +  APIHref + '/' + webAPIGroups[0][group].overview[0].replace(/ /g, '_') + '">' + webAPIGroups[0][group].overview[0] + '</a></strong></li>';
+  output += `<li><strong>${web.smartLink(APIHref + '/' + webAPIGroups[0][group].overview[0].replace(/ /g, '_'), null, webAPIGroups[0][group].overview[0], APIHref)}</strong></li>`;
 }
-output += '<li><strong><a href="' +  APIHref + '/' + mainIF + '"><code>' + mainIF + '</code></a></strong></li>';
+
+output += `<li><strong>${web.smartLink(APIHref + '/' + mainIF, null, `<code>${mainIF}</code>`, APIHref)}</strong></li>`;
 
 if (ctors.length > 0) {
   output += buildSublist(ctors, text['Constructor']);
