Generate clickable anchor links for the htmlattrdef macro.

--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -96,6 +96,13 @@ a.new {
         background-color: transparent;
       }
     }
+
+    &[id^="attr-"] {
+      &:link,
+      &:visited {
+        color: $neutral-100;
+      }
+    }
   }
 
   h2 {
