underline links in meta document footer

--- a/client/src/document/organisms/metadata/index.scss
+++ b/client/src/document/organisms/metadata/index.scss
@@ -12,6 +12,11 @@
   margin: 0 auto;
   max-width: $max-width-default;
 
+  a:link,
+  a:visited {
+    text-decoration: underline;
+  }
+
   .on-github {
     margin-bottom: $base-spacing;
   }
