open in your editor

--- a/client/src/sitemap/index.scss
+++ b/client/src/sitemap/index.scss
@@ -1,6 +1,10 @@
 #sitemap {
   min-height: 800px;
 
+  .open-in-your-editor {
+    cursor: pointer;
+  }
+
   ul.breadcrumb {
     li {
       list-style-type: none;
