adding some nice features

--- a/client/src/document/toolbar/flaws.scss
+++ b/client/src/document/toolbar/flaws.scss
@@ -32,6 +32,10 @@
       text-decoration: none;
       background-color: #fbb;
     }
+
+    .full-explanation li {
+      margin-bottom: 1px;
+    }
   }
 
   .macro-filepath-in-prerequisite {
