--- a/client/src/traits/index.scss
+++ b/client/src/traits/index.scss
@@ -1,3 +1,15 @@
+button.button-inline-small {
+  display: inline;
+  margin-right: 2px;
+  white-space: nowrap;
+  padding: 2px 4px;
+  font-weight: normal;
+  min-height: 30px;
+}
+button:disabled {
+  opacity: 0.6;
+}
+
 .all-traits {
   .sub-nav {
     margin: 100px;
