--- a/client/src/settings/index.scss
+++ b/client/src/settings/index.scss
@@ -85,7 +85,7 @@
 .settings-form,
 .close-account {
   border: 1px solid $neutral-500;
-  border-top-width: 5px;
+  border-top: 5px solid $primary-100;
   flex-basis: 45%;
   padding: $base-spacing;
 }
