--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -1,6 +1,6 @@
 // We're assuming that code snippets are so common that it's OK to always
 // include them in every page.
-@import "./minimal-prism.scss";
+@import "./minimal-prism";
 
 @import "~@mdn/minimalist/sass/mdn-minimalist";
 @import "./ui/molecules/grids/grids";
