Allow linebreaks in first arg of SpecName macro
This change allows the first argument of the SpecName macro (the spec
title) to have linebreak in it.

Otherwise, without this change, we have 207 instances of SpecName macro
in Specification tables in MDN that all show up as "Unknown".

--- a/kumascript/macros/SpecName.ejs
+++ b/kumascript/macros/SpecName.ejs
@@ -11,7 +11,7 @@
 //      a specific method, property, or other entity to customize the
 //      appearance of the link.
 
-var spec   = $0;
+var spec   = $0.replace(/\s+/g, ' ').trim();
 var anchor = $1;
 var name;
 var url;
