make all front-matter available in KS rendering
Fixes #3258

--- a/kumascript/macros/Compat.ejs
+++ b/kumascript/macros/Compat.ejs
@@ -30,7 +30,7 @@ Example calls
 
 */
 
-var query = $0;
+var query = $0 || env['browser-compat'];
 var depth = $1 || 1;
 var output = `<div class="bc-data" id="bcd:${query}" data-depth="${depth}">
   If you're able to see this, something went wrong on this page.
