--- a/kumascript/macros/SpecificationTable.ejs
+++ b/kumascript/macros/SpecificationTable.ejs
@@ -14,6 +14,9 @@ Example calls
 */
 
 var query = $0 || env['browser-compat'];
+if (!query) {
+  throw new Error("No first query argument or 'browser-compat' front-matter value passed");
+}
 var output = `<div class="bc-specs" data-bcd-query="${query}"></div>`;
 %>
 
