Add a KumaScript test

--- a/kumascript/macros/SpecificationTable.ejs
+++ b/kumascript/macros/SpecificationTable.ejs
@@ -17,7 +17,9 @@ var query = $0 || env['browser-compat'];
 if (!query) {
   throw new Error("No first query argument or 'browser-compat' front-matter value passed");
 }
-var output = `<div class="bc-specs" data-bcd-query="${query}"></div>`;
+var output = `<div class="bc-specs" data-bcd-query="${query}">
+  If you're able to see this, something went wrong on this page.
+</div>`;
 %>
 
 <%-output%>
