--- a/client/src/document/organisms/sidebar/index.scss
+++ b/client/src/document/organisms/sidebar/index.scss
@@ -29,6 +29,11 @@
     margin-bottom: $base-spacing / 2;
   }
 
+  li.active a {
+    font-style: italic;
+    color: rgb(33, 33, 33);
+  }
+
   a {
     hyphens: auto;
   }
