--- a/kumascript/macros/Glossary.ejs
+++ b/kumascript/macros/Glossary.ejs
@@ -8,7 +8,7 @@
 
 let str = $1 || $0;
 
-let URL = `/${env.locale}/docs/Glossary/`;
-URL += $0.replace(/\s+/g,'_');
-
-%><a href="<%- URL %>"><%= str %></a>
+let basePath = `/${env.locale}/docs/Glossary/`;
+let subPath = $0.replace(/\s+/g,'_');
+const link = web.smartLink(basePath + subPath, null, str, subPath, basePath);
+%><%- link %>
