Add browser-specs data; update tests; update renderer

--- a/kumascript/macros/SpecificationTable.ejs
+++ b/kumascript/macros/SpecificationTable.ejs
@@ -8,8 +8,8 @@ $0 – A query string indicating for which feature to retrieve specification URL
 
 Example calls
 
-{{specs}}
-{{specs("html.element.abbr")}}
+{{SpecificationTable}}
+{{SpecificationTable("html.element.abbr")}}
 
 */
 
