--- a/kumascript/macros/EmbedInteractiveExample.ejs
+++ b/kumascript/macros/EmbedInteractiveExample.ejs
@@ -8,16 +8,28 @@
 //  Example call {{EmbedInteractiveExample("pages/css/animation.html", "taller")}}
 //
 
-let iClass = "interactive";
-let url = kuma.url.resolve(env.interactive_examples.base_url, $0);
+const url = kuma.url.resolve(env.interactive_examples.base_url, $0);
+let height = 390;
 
 if ($0.includes('/js/')) {
-    iClass += " interactive-js";
+    height = 490;
 }
 
 if ($1) {
-    iClass += " " + $1;
+    if ($1 === 'shorter') {
+        height = 410;
+    } else if ($1 === 'taller') {
+        height = 692;
+    } else if ($1 === 'tabbed-shorter') {
+        height = 375;
+    } else  if ($1 === 'tabbed-standard') {
+        height = 445;
+    } else if ($1 === 'tabbed-taller') {
+        height = 655;
+    } else {
+        throw new Error(`An unrecognized second size parameter to EmbedInteractiveExample ('${$1}')`);
+    }
 }
 
 %>
-<iframe class="<%= iClass %>" width="100%" height="250" src="<%= url %>" title="MDN Web Docs Interactive Example"></iframe>
+<iframe class="interactive" width="100%" height="<%= height %>" src="<%= url %>" title="MDN Web Docs Interactive Example"></iframe>
