--- a/client/src/document/toolbar/flaws.scss
+++ b/client/src/document/toolbar/flaws.scss
@@ -33,7 +33,7 @@
       background-color: #fbb;
     }
 
-    .full-explanation li {
+    .explanation-notes li {
       margin-bottom: 1px;
     }
   }
