--- a/kumascript/macros/Specifications.ejs
+++ b/kumascript/macros/Specifications.ejs
@@ -8,8 +8,8 @@ $0 – A query string indicating for which feature to retrieve specification URL
 
 Example calls
 
-{{SpecificationTable}}
-{{SpecificationTable("html.element.abbr")}}
+{{Specifications}}
+{{Specifications("html.element.abbr")}}
 
 */
 
