--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -7,6 +7,7 @@
 @import "~@mdn/minimalist/sass/mixins/utils";
 
 @import "./molecules/breadcrumb-locale-container";
+@import "./molecules/notecards";
 
 .main-content {
   @media #{$mq-small-desktop-and-up} {
