update the translation of the Angular

--- a/kumascript/macros/LearnSidebar.ejs
+++ b/kumascript/macros/LearnSidebar.ejs
@@ -1470,12 +1470,12 @@ var text = mdn.localStringMap({
         'TypeScript_support_in_Svelte': 'TypeScript support in Svelte',
         'Deployment_and_next_steps': 'Deployment and next steps',
       'Angular': 'Angular',
-        'Getting_started_with_Angular': 'Getting started with Angular',
-        'Beginning_our_Angular_todo_list_app': 'Beginning our Angular todo list app',
-        'Styling_our_Angular_app': 'Styling our Angular app',
-        'Creating_an_item_component': 'Creating an item component',
-        'Filtering_our_to-do_items': 'Filtering our to-do items',
-        'Building_Angular_applications_and_further_resources': 'Building Angular applications and further resources',
+        'Getting_started_with_Angular': 'Angular 新手入門',
+        'Beginning_our_Angular_todo_list_app': '開始開發我們的 Angular 待辦事項應用程式',
+        'Styling_our_Angular_app': '使用樣式點綴我們的 Angular 應用程式',
+        'Creating_an_item_component': '建立一個 item 元件',
+        'Filtering_our_to-do_items': '篩選我們的待辦事項項目',
+        'Building_Angular_applications_and_further_resources': '建構 Angular 應用程式與更多資源',
     'Server-side_website_programming' : '伺服端網站程式設計',
       'First_steps' : '第一步',
         'First_steps_overview' : '第一步概述',
