update the specific wording's translation

--- a/kumascript/macros/LearnSidebar.ejs
+++ b/kumascript/macros/LearnSidebar.ejs
@@ -1417,7 +1417,7 @@ var text = mdn.localStringMap({
         'How_to_build_custom_form_controls' : 'How to build custom form controls',
         'Sending_forms_through_JavaScript' : 'Sending forms through JavaScript',
         'CSS_property_compatibility_table_for_form_controls' : 'CSS property compatibility table for form controls',
-    'Accessibility_—_Make_the_web_usable_by_everyone' : '無障礙網頁 — 讓網頁可以被每個人所使用',
+    'Accessibility_—_Make_the_web_usable_by_everyone' : '無障礙網頁 — 每個人都可以使用的網頁',
     'Accessibility_guides' : '無障礙網頁指南',
     'Accessibility_assessment' : '無障礙網頁評估',
       'Accessibility_overview' : '無障礙網頁概述',
