changes based on review feedback

--- a/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-history.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-history.scss
@@ -16,6 +16,7 @@ tr.bc-history {
     @media #{$mq-large-desktop-and-up} {
       align-items: flex-start;
       display: flex;
+      flex-wrap: wrap;
       gap: $base-spacing;
     }
   }
