--- a/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-table.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-table.scss
@@ -95,6 +95,10 @@
     tr:nth-child(even) {
       background-color: $neutral-550;
     }
+
+    dl {
+      max-width: 100%;
+    }
   }
 
   .bc-browser-name {
