update the translation of the zh-TW (#3663)
* update the translation of the zh-TW

* update the specific wording's translation

--- a/kumascript/macros/LearnSidebar.ejs
+++ b/kumascript/macros/LearnSidebar.ejs
@@ -1307,15 +1307,20 @@ var text = mdn.localStringMap({
         'Adding_vector_graphics_to_the_Web': '為 Web 新增向量圖',
         'Responsive_images': '適應性圖片',
         'Assessment_Mozilla_splash_page': '親和度：Mozilla 形象頁面',
+      'HTML_tables' : 'HTML 表格',
+        'HTML_tables_overview' : 'HTML 表格概述',
+        'HTML_table_basics' : 'HTML表格基礎',
+        'HTML_table_advanced' : 'HTML Table advanced features and accessibility',
+        'Assessment_Structuring_planet_data' : 'Assessment: Structuring planet data',
     'CSS_styling_the_Web': 'CSS — 設計 Web 的風格',
-      'CSS_first_steps': 'CSS first steps',
-        'CSS_first_steps_overview': 'CSS first steps overview',
-        'What_is_CSS':  'What is CSS?',
-        'Getting_started_with_CSS': 'Getting started with CSS',
+      'CSS_first_steps': '初探 CSS',
+        'CSS_first_steps_overview': '初探 CSS（概述）',
+        'What_is_CSS':  'CSS 是什麼？',
+        'Getting_started_with_CSS': 'CSS 入門',
         'How_CSS_is_structured': 'How CSS is structured',
-        'How_CSS_works': 'How CSS works',
+        'How_CSS_works': 'CSS 怎麼運作',
         'Using_your_new_knowledge': 'Using your new knowledge',
-      'CSS_building_blocks': 'CSS building blocks',
+      'CSS_building_blocks': 'CSS 組件',
         'CSS_building_blocks_overview': 'CSS building blocks overview',
         'Cascade_and_inheritance': 'Cascade and inheritance',
         'CSS_selectors': 'CSS selectors',
@@ -1379,7 +1384,7 @@ var text = mdn.localStringMap({
         'Working_with_JSON_data' : '使用 JSON 資料',
         'Object_building_practice' : '物件建構實作',
         'Assessment_Adding_features_to_our_bouncing_balls_demo' : '親合度：為彈跳球展示新增功能',
-      'Asynchronous_JavaScript': 'Asynchronous JavaScript',
+      'Asynchronous_JavaScript': '非同步的 JavaScript',
         'Asynchronous_JavaScript_overview': 'Asynchronous JavaScript overview',
         'General_asynchronous_programming_concepts': 'General asynchronous programming concepts',
         'Introducing_asynchronous_JavaScript': 'Introducing asynchronous JavaScript',
@@ -1387,19 +1392,19 @@ var text = mdn.localStringMap({
         'Promises': 'Graceful asynchronous programming with Promises',
         'Async_await': 'Making asynchronous programming easier with async and await',
         'Choosing_the_right_approach': 'Choosing the right approach',
-      'Client-side_web_APIs': 'Client-side web APIs',
+      'Client-side_web_APIs': '客戶端 web APIs',
         'Client-side_web_APIs_Introduction': 'Introduction to web APIs',
-        'Client-side_web_APIs_Manipulating_documents': 'Manipulating documents',
+        'Client-side_web_APIs_Manipulating_documents': '文件操作',
         'Client-side_web_APIs_Fetching_data': 'Fetching data from the server',
         'Client-side_web_APIs_Third_party_APIs': 'Third party APIs',
         'Client-side_web_APIs_Drawing_graphics': 'Drawing graphics',
         'Client-side_web_APIs_Video_and_audio_APIs': 'Video and audio APIs',
         'Client-side_web_APIs_client-side_storage': 'Client-side storage',
-    'Web_forms' : 'Web forms — Working with user data',
-      'Web_forms_core' : 'Core forms learning pathway',
-        'Web_forms_overview' : 'Web forms overview',
+    'Web_forms' : '網頁表單-與使用者資料合作',
+      'Web_forms_core' : '核心的表單學習途徑',
+        'Web_forms_overview' : '網頁表單概述',
         'Your_first_form' : 'Your first form',
-        'How_to_structure_a_web_form' : 'How to structure a web form',
+        'How_to_structure_a_web_form' : '如何建構網頁表單',
         'Basic_native_form_controls' : 'Basic native form controls',
         'The_HTML5_input_types': 'The HTML5 input types',
         'Other_form_controls': 'Other form controls',
@@ -1408,10 +1413,21 @@ var text = mdn.localStringMap({
         'UI_pseudo-classes': 'UI pseudo-classes',
         'Client-side_form_validation' : 'Client-side form validation',
         'Sending_form_data' : 'Sending form data',
-      'Web_forms_advanced': 'Advanced forms articles',
+      'Web_forms_advanced': '深入網頁表單',
         'How_to_build_custom_form_controls' : 'How to build custom form controls',
         'Sending_forms_through_JavaScript' : 'Sending forms through JavaScript',
         'CSS_property_compatibility_table_for_form_controls' : 'CSS property compatibility table for form controls',
+    'Accessibility_—_Make_the_web_usable_by_everyone' : '無障礙網頁 — 每個人都可以使用的網頁',
+    'Accessibility_guides' : '無障礙網頁指南',
+    'Accessibility_assessment' : '無障礙網頁評估',
+      'Accessibility_overview' : '無障礙網頁概述',
+      'What_is_accessibility' : '何謂無障礙網頁？',
+      'HTML_a_good_basis_for_accessibility' : 'HTML: A good basis for accessibility',
+      'CSS_and_JavaScript_accessibility_best_practices' : 'CSS and JavaScript accessibility best practices',
+      'WAI-ARIA_basics' : 'WAI-ARIA 基礎',
+      'Accessible_multimedia' : 'Accessible multimedia',
+      'Mobile_accessibility' : '行動裝置上的無障礙',
+      'Assessment_Accessibility_troubleshooting' : 'Assessment: Accessibility troubleshooting',
     'Tools_and_testing' : '工具與測試',
       'Cross_browser_testing' : '跨瀏覽器測試',
         'Cross_browser_testing_overview' : '跨瀏覽器測試概述',
@@ -1424,7 +1440,7 @@ var text = mdn.localStringMap({
         'Introduction_to_automated_testing' : '自動化測試介紹',
         'Setting_up_your_own_test_automation_environment' : '設定自己的自動化測試環境',
       'Git_and_GitHub' : 'Git and GitHub',
-        'Git_and_GitHub_overview' : 'Git and GitHub overview',
+        'Git_and_GitHub_overview' : 'Git and GitHub 概述',
       'Client-side_web_development_tools' : 'Client-side web development tools',
         'Client-side_web_development_tools_index' : 'Client-side web development tools index',
         'Client-side_tooling_overview' : 'Client-side tooling overview',
@@ -1432,8 +1448,8 @@ var text = mdn.localStringMap({
         'Package_management_basics' : 'Package management basics',
         'Introducing_a_complete_toolchain' : 'Introducing a complete toolchain',
         'Deploying_our_app' : 'Deploying our app',
-      'Introduction_to_client-side_frameworks': 'Introduction to client-side frameworks',
-        'Client-side_frameworks_overview': 'Client-side frameworks overview',
+      'Introduction_to_client-side_frameworks': '介紹前端框架',
+        'Client-side_frameworks_overview': '前端框架簡介',
         'Framework_main_features': 'Framework main features',
       'React': 'React',
         'Getting_started_with_React': 'Getting started with React',
@@ -1451,7 +1467,7 @@ var text = mdn.localStringMap({
         'Routing_in_Ember': 'Routing in Ember',
         'Ember_resources_and_troubleshooting': 'Ember resources and troubleshooting',
       'Vue': 'Vue',
-        'Getting_started_with_Vue': 'Getting started with Vue',
+        'Getting_started_with_Vue': '開始學 Vue',
         'Creating_our_first_Vue_component': 'Creating our first Vue component',
         'Rendering_a_list_of_Vue_components': 'Rendering a list of Vue components',
         'Adding_a_new_todo_form:_Vue_events_methods_and_models': 'Adding a new todo form: Vue events, methods, and models',
@@ -1461,7 +1477,7 @@ var text = mdn.localStringMap({
         'Focus_management_with_Vue_refs': 'Focus management with Vue refs',
         'Vue_resources': 'Vue resources',
       'Svelte': 'Svelte',
-        'Getting_started_with_Svelte': 'Getting started with Svelte',
+        'Getting_started_with_Svelte': 'Svelte 入門',
         'Starting_our_Svelte_Todo_list_app': 'Starting our Svelte Todo list app',
         'Dynamic_behavior_in_Svelte:_working_with_variables_and_props': 'Dynamic behavior in Svelte: working with variables and props',
         'Componentizing_our_Svelte_app': 'Componentizing our Svelte app',
