add the lost part and update the translation for Express (#3664)
* add the lost part and update the translation for Express

* update the translations to make more fluency

--- a/kumascript/macros/LearnSidebar.ejs
+++ b/kumascript/macros/LearnSidebar.ejs
@@ -1516,6 +1516,17 @@ var text = mdn.localStringMap({
         'Tutorial_Part_11_Deploying_Django_to_production' : '線上教學 11：佈署 Django 至產品',
         'Web_application_security' : 'Web App 安全性',
         'Assessment_DIY_mini_blog' : '親合度：DIY 迷你部落格',
+      'Express_Web_Framework_(Node.js_JavaScript)' : 'Express 網站框架 (node.js/JavaScript)',
+        'Express_Web_Framework_(Node.js_JavaScript)_overview' : 'Express 網站框架 (Node.js/JavaScript) 概述',
+        'Express_Node_introduction' : 'Express/Node 介紹',
+        'Setting_up_a_Node_(Express)_development_environment' : '設定 Node (Express) 的開發環境',
+        'Express_Tutorial_The_Local_Library_website' : 'Express 教學 1: 本地圖書館網站',
+        'Express_Tutorial_Part_2_Creating_a_skeleton_website' : 'Express 教學 2: 建立骨架網站',
+        'Express_Tutorial_Part_3_Using_a_database_(with_Mongoose)' : 'Express 教學 3: 使用資料庫 (Mongoose)',
+        'Express_Tutorial_Part_4_Routes_and_controllers' : 'Express 教學 4: 路由與控制器',
+        'Express_Tutorial_Part_5_Displaying_library_data' : 'Express 教程 5: 呈現圖書館的資料',
+        'Express_Tutorial_Part_6_Working_with_forms' : 'Express 教學 6: 使用表單',
+        'Express_Tutorial_Part_7_Deploying_to_production' : 'Express 教學 7: 佈署到正式環境',
     'Further_resources': '更多資源',
     'Common_questions': '常見問題',
       'HTML_questions': 'HTML 問題',
