fix: move icon svg in macros to background images
Switch SVG in macros from inline SVG to background images

Fix #3385

--- a/client/src/document/organisms/sidebar/index.scss
+++ b/client/src/document/organisms/sidebar/index.scss
@@ -50,4 +50,8 @@
     height: 18px;
     width: 18px;
   }
+
+  .experimental-icon {
+    background-image: url("~@mdn/dinocons/general/flask.svg");
+  }
 }
