--- a/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-history-link.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-history-link.scss
@@ -2,10 +2,12 @@
   display: none;
 
   @media #{$mq-tablet-and-up} {
-    background-color: transparent;
+    background: transparent url("~@mdn/dinocons/arrows/triangle.svg") center
+      center no-repeat;
+    background-size: 16px;
     border: 0;
+    border-bottom: 1px solid $neutral-100;
     border-radius: 0;
-    border-top: 1px solid $neutral-100;
     box-shadow: none;
     color: $neutral-100;
     cursor: pointer;
@@ -14,22 +16,8 @@
     height: 16px;
     padding: $base-spacing / 2;
     position: relative;
+    transform: rotate(180deg);
     width: 100%;
-
-    &::before {
-      background: transparent url("~@mdn/dinocons/arrows/triangle.svg") 0 0
-        no-repeat;
-      background-size: 16px;
-      content: "";
-      display: block;
-      height: 16px;
-      left: 50%;
-      margin: 0 auto;
-      position: absolute;
-      top: 5px;
-      transform: rotate(180deg);
-      width: 16px;
-    }
   }
 
   @media #{$mq-small-desktop-and-up} {
@@ -39,19 +27,11 @@
     padding: 0;
     position: absolute;
     z-index: $top-layer;
-
-    &::before {
-      background-size: 12px;
-      height: 12px;
-      left: 40%;
-      top: 0;
-      width: 12px;
-    }
   }
 }
 
 .bc-history-link-inverse {
-  &::before {
-    transform: rotate(0deg);
-  }
+  border: 0;
+  border-top: 1px solid $neutral-100;
+  transform: rotate(0deg);
 }
