Change links to show underline only on hover.

--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -101,6 +101,12 @@ a.new {
       &:link,
       &:visited {
         color: $neutral-100;
+        text-decoration: none;
+      }
+
+      &:hover,
+      &:focus {
+        text-decoration: underline;
       }
     }
   }
