--- a/client/src/ui/molecules/search/index.scss
+++ b/client/src/ui/molecules/search/index.scss
@@ -57,6 +57,18 @@
       color: $yellow-100;
     }
 
+    div {
+      padding: $base-unit;
+    }
+
+    .nothing-found {
+      font-style: italic;
+    }
+
+    .fuzzy-engaged {
+      font-size: $tiny-text;
+    }
+
     .result-item {
       border-bottom: 1px solid $neutral-550;
       padding: $base-unit;
