fix breaking changes

--- a/client/src/document/molecules/_notecards.scss
+++ b/client/src/document/molecules/_notecards.scss
@@ -23,7 +23,7 @@
 }
 
 .notecard {
-  border-left: $notecard-border;
+  border-left: $base-unit solid $primary-200;
   margin: 0;
   margin-bottom: $base-spacing;
   padding: ($base-spacing / 2);
