--- a/client/src/translations/index.scss
+++ b/client/src/translations/index.scss
@@ -11,6 +11,17 @@
     }
   }
 
+  .loading {
+    text-align: center;
+    margin: 200px;
+
+    progress {
+      width: 600px;
+      height: 30px;
+      border-radius: 2px;
+    }
+  }
+
   table {
     width: 100%;
 
