Change <strong> to <b> as it is more appropriate.

--- a/kumascript/macros/htmlattrdef.ejs
+++ b/kumascript/macros/htmlattrdef.ejs
@@ -1,2 +1,2 @@
 <%/* Example: <span class="script">htmlattrdef("placeholder")</span> */%>
-<a id="attr-<%=$0%>" href="#attr-<%=$0%>"><strong><code><%=$0%></code></strong></a>
+<a id="attr-<%=$0%>" href="#attr-<%=$0%>"><b><code><%=$0%></code></b></a>
