fix error message styling

--- a/client/src/translations/index.scss
+++ b/client/src/translations/index.scss
@@ -2,7 +2,7 @@
   .error-message {
     background-color: rgb(252, 159, 159);
     padding: 10px;
-    margin: 20px;
+    margin: 25px 0;
 
     h3,
     h4 {
